force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Represents an upcoming or previous event, such as a concert or conference.</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>