force-app/main/default/objects/Event__c/fields/Age_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Age_Restriction__c</fullName>
    <label>Age Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Ages</fullName>
            </value>
            <value>
                <fullName>16+</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>