force-app/main/default/objects/Event__c/fields/Catering_Required__c.field-meta.xml
<CustomField>
    <fullName>Catering_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catering Required</label>
    <type>Checkbox</type>
</CustomField>