force-app/main/default/objects/Event__c/fields/Film_Title__c.field-meta.xml
<CustomField>
    <fullName>Film_Title__c</fullName>
    <label>Film Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>