force-app/main/default/objects/Event__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Jazz</fullName>
            </value>
            <value>
                <fullName>Classical</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Hip-Hop</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>