force-app/main/default/objects/Event__c/fields/Headliner__c.field-meta.xml
<CustomField>
    <fullName>Headliner__c</fullName>
    <label>Headliner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>