force-app/main/default/objects/Event__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hosted Events</relationshipLabel>
    <relationshipName>Hosted_Events</relationshipName>
    <type>Lookup</type>
</CustomField>