force-app/main/default/objects/Event__c/fields/Keynote_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Keynote_Speaker__c</fullName>
    <label>Keynote Speaker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>