force-app/main/default/objects/Event__c/fields/Subtitled__c.field-meta.xml
<CustomField>
    <fullName>Subtitled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subtitled</label>
    <type>Checkbox</type>
</CustomField>