force-app/main/default/objects/Event__c/fields/Supporting_Acts__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Acts__c</fullName>
    <label>Supporting Acts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>