force-app/main/default/objects/Event__c/fields/Total_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations__c</fullName>
    <label>Total Registrations</label>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>