force-app/main/default/objects/Event__c/recordTypes/Concert.recordType-meta.xml
<RecordType>
    <fullName>Concert</fullName>
    <active>true</active>
    <description>Record type for concert events.</description>
    <label>Concert</label>
</RecordType>