force-app/main/default/objects/Event__c/recordTypes/Conference.recordType-meta.xml
<RecordType>
    <fullName>Conference</fullName>
    <active>true</active>
    <description>Record type for conference events.</description>
    <label>Conference</label>
</RecordType>