force-app/main/default/objects/Event__c/recordTypes/Entertainment.recordType-meta.xml
<RecordType>
    <fullName>Entertainment</fullName>
    <active>true</active>
    <description>Record type for entertainment events.</description>
    <label>Entertainment</label>
</RecordType>