force-app/main/default/objects/Event__c/recordTypes/Movie.recordType-meta.xml
<RecordType>
    <fullName>Movie</fullName>
    <active>true</active>
    <description>Record type for movie events.</description>
    <label>Movie</label>
</RecordType>