force-app/main/default/objects/Event__c/validationRules/Event_Date_Required_Before_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Required_Before_Deadline</fullName>
    <active>true</active>
    <description>Prevents Registration Deadline from being populated if Event Date has not been entered.</description>
    <errorConditionFormula>NOT(ISBLANK(Registration_Deadline__c)) &amp;&amp; ISBLANK(Event_Date__c)</errorConditionFormula>
    <errorDisplayField>Registration_Deadline__c</errorDisplayField>
    <errorMessage>Registration Deadline cannot be set until an Event Date has been entered.</errorMessage>
</ValidationRule>