force-app/main/default/objects/Event__c/validationRules/Prevent_Late_Cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Late_Cancellation</fullName>
    <active>true</active>
    <description>Prevents Status from being set to Cancelled if the Event Date is within 7 days from today.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Cancelled") &amp;&amp;
    NOT(ISBLANK(Event_Date__c)) &amp;&amp;
    DATEVALUE(Event_Date__c) &gt;= TODAY() &amp;&amp;
    (DATEVALUE(Event_Date__c) - TODAY()) &lt;= 7</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be set to Cancelled when the Event Date is within 7 days from today.</errorMessage>
</ValidationRule>